# deaths-edge

./: Cargo.toml  README.md  run.bat
client/: Cargo.toml
client/src/: abilities.rs  environment.rs  game_camera.rs  input_mapping.rs  main.rs  music.rs  network.rs  spawning.rs  state.rs  window.rs
client/src/character/: health.rs  index.rs  materials.rs  mod.rs  player.rs  power.rs  reconcile.rs  speed_multiplier.rs
client/src/character/classes/: dummy.rs  mars.rs  medea.rs  mod.rs
client/src/effects/: damage.rs  interrupt.rs
client/src/input_mapping/: bindings.rs  keys.rs  mod.rs  mouse.rs
client/src/network/: character_command.rs  mod.rs
client/src/spells/: instances.rs  marker.rs  materials.rs  mod.rs  source.rs  spawn.rs
client/src/spells/instances/: fireball.rs  spear.rs
client/src/ui/: button.rs  camera.rs  character_selection.rs  mod.rs  mouse.rs  selected.rs  splash.rs
client/src/ui/character_selection/: confirm_button.rs  cycle_button.rs  mod.rs
client/src/ui/hud/: button.rs  camera.rs  mod.rs  selected.rs
client/src/ui/hud/nameplate/: mod.rs  parent.rs
client/src/ui/nameplate/: castbar.rs  health.rs  materials.rs  mod.rs  parent.rs  power.rs  setup.rs
common/: Cargo.toml
common/src/: actions.rs  dyn_command.rs  environment.rs  game.rs  lib.rs  physics.rs  spawning.rs  state.rs
common/src/abilities/: cast.rs  cast_duration.rs  cast_type.rs  cooldown.rs  damage.rs  global_cooldown.rs  health_cost.rs  info.rs  instant.rs  instant_damage.rs  instant_interrupt.rs  lifecycle.rs  magic_school.rs  magic_type.rs  maximum_range.rs  mod.rs  power_cost.rs  projectile.rs  requires_fov.rs  requires_los.rs  requires_stationary.rs  requires_target.rs  spell_type.rs  target.rs
common/src/abilities/checks/: ability_cooldown.rs  global_cooldown.rs  maximum_range.rs  mod.rs  power.rs  requires_fov.rs  requires_los.rs  requires_stationary.rs  requires_target.rs
common/src/abilities/cooldowns/: ability_cooldown.rs  global_cooldown.rs  mod.rs
common/src/abilities/cost/: health.rs  health_cost.rs  mod.rs  power.rs  power_cost.rs
common/src/abilities/effects/: apply_status.rs  damage.rs  displace.rs  dot.rs  induce_global_cooldown.rs  interrupt.rs  mod.rs  power_burn.rs  spawn_entity.rs  status.rs  trigger_cooldown.rs  trigger_global_cooldown.rs
common/src/abilities/instances/: blink.rs  complain.rs  fireball.rs  fireblast.rs  kick.rs  mod.rs  scorch.rs
common/src/abilities/instant/: damage.rs  interrupt.rs  mod.rs
common/src/abilities/lifecycle/: cast.rs  instant.rs  mod.rs  status.rs
common/src/abilities/obstructions/: ability_cooldown.rs  cant_while_casting.rs  global_cooldown.rs  maximum_range.rs  mod.rs  power.rs  requires_fov.rs  requires_los.rs  requires_stationary.rs  requires_target.rs
common/src/abilities/projectile/: damage.rs  mod.rs  speed.rs  target.rs  track_target.rs
common/src/abilities/spatial/: maximum_range.rs  mod.rs  requires_fov.rs  requires_los.rs
common/src/character/: abilities.rs  buffs.rs  cast_id.rs  casting.rs  classes.rs  commands.rs  control.rs  cooldowns.rs  health.rs  index.rs  interrupt.rs  mod.rs  power.rs  speed_multiplier.rs  target.rs  team.rs
common/src/character/actions/: ability.rs  focal_angle.rs  mod.rs  motion.rs  select.rs  target.rs
common/src/character/classes/: dummy.rs  mars.rs  medea.rs  mod.rs
common/src/character/commands/: action.rs  focal_angle.rs  mod.rs  motion.rs  target.rs
common/src/effects/: buff.rs  control.rs  damage.rs  heal.rs  mod.rs  target.rs
common/src/effects/interrupts/: mod.rs  motion.rs
common/src/network/: client.rs  messages.rs  mod.rs  send.rs  server.rs
common/src/networking/: client.rs  mod.rs  server.rs
common/src/spells/: cast.rs  impact.rs  index.rs  marker.rs  mod.rs  projectiles.rs  source.rs  target.rs  utilities.rs
common/src/spells/instances/: fireball.rs  mod.rs  spear.rs
ladder/: .env  Cargo.toml
ladder/src/: create.rs  create_account.rs  create_team.rs  main.rs  setup.rs
ladder/src/authorize/: claims.rs  keys.rs  mod.rs
ladder/src/models/: account.rs  match2.rs  mod.rs  team2.rs
ladder/tests/: create.rs
matchmaker/: Cargo.toml
matchmaker/src/: main.rs
server/: Cargo.toml
server/src/: character.rs  main.rs  network.rs  spawning.rs  state.rs
src/: buffs.rs  camera.rs  character.rs  environment.rs  game_camera.rs  game_event.rs  input_mapping.rs  main.rs  networking.rs  physics.rs  spawning.rs  spell.rs  state.rs  ui.rs
src/character/: casting.rs  classes.rs  cooldowns.rs  health.rs  index.rs  interrupt.rs  interupt.rs  materials.rs  mod.rs  player.rs  power.rs  speed_multiplier.rs  target.rs
src/debug/: fps.rs  logs.rs  mod.rs
src/effects/: damage.rs  (+5 more)
(+29 files in other folders)
