[package]
name = "deaths-edge"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { git = "https://github.com/jrxb/bevy.git" }
heron = { git = "https://github.com/jrxb/heron.git", features = ["2d"] }

crossterm = "0.22.1"
tui = { version = "0.16.0", default-features = false, features = ['crossterm'] }
ansi-to-tui = "0.4.1"

tracing = "0.1.29"
tracing-subscriber = { version = "0.3.3", features = ["env-filter", "std"] }

thiserror = "1.0.30"
