[package]
name = "deaths-edge"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }

heron = { path = "../heron", features = ["2d"] }

bevy_ggrs = { git = "https://github.com/gschup/bevy_ggrs.git" }
ggrs = "0.5.1"

clap = "3.0.0-beta.5"

crossterm = "0.22.1"
tui = { version = "0.16.0", default-features = false, features = ['crossterm'] }
ansi-to-tui = "0.4.1"

tracing = "0.1.29"
tracing-subscriber = { version = "0.3.3", features = ["env-filter", "std"] }

thiserror = "1.0.30"
