[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.5.0"

structopt = "0.3.25"

crossterm = "0.22.1"
tui = { version = "0.16.0", default-features = false, features = ['crossterm'] }
ansi-to-tui = "0.4.1"

tracing = "0.1.29"
tracing-subscriber = { version = "0.3.3", features = ["env-filter", "std"] }

thiserror = "1.0.30"

common = { path = "../common" }
