[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.6.0"

clap = { version = "3.0.14", features = ["derive"] }

tracing = "0.1.29"
tracing-subscriber = { version = "0.3.6", features = ["env-filter", "std"] }

thiserror = "1.0.30"

common = { path = "../common" }

bevy_egui = "0.11.1"
