[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.5.0"

heron = { version = "0.12.1", features = ["2d"] }

tracing = "0.1.29"

thiserror = "1.0.30"

serde = { version = "1.0.131", features = ["derive"] }
postcard = { version = "0.7.2", features = ["use-std"], default-features = false }
laminar = "0.5.0"
