[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.6.0"

heron = { version = "1.0.1-rc.1", features = ["2d"] }

tracing = "0.1.29"

thiserror = "1.0.30"

serde = { version = "1.0.133", features = ["derive"] }
postcard = { version = "0.7.3", features = ["use-std"], default-features = false }
bevy_networking_turbulence = "0.4.0"

static_assertions = "1.1.0"