[package]
name = "ladder"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.4.3", features = ["ws", "headers"]}
tokio = { version = "1.15.0", features = ["macros"] }
jsonwebtoken = "7.2.0"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"

once_cell = "1.9.0"
dotenv = "0.15.0"

sea-orm = { version = "0.4.2", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"], default-features = false }

tracing = "0.1.29"
tracing-subscriber = "0.3.4"
