[package]
name = "ladder"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.4.4", features = ["ws", "headers"] }
tokio = { version = "1.15.0", features = ["macros"] }
jsonwebtoken = "7.2.0"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
tower = "0.4.11"

once_cell = "1.9.0"
dotenv = "0.15.0"

sea-orm = { version = "0.5.0", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"], default-features = false }

tracing = "0.1.29"
tracing-subscriber = "0.3.6"

[dev-dependencies]
reqwest = { version = "0.11.9", features = ["json"] }
